manifests/dev1.3/kube.deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "dispatch-msg-ingest-service-deployment"
spec:
  # this replicas value is default
  # modify it according to your case
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: "dispatch-msg-ingest-service-selector"
    spec:
      imagePullSecrets:
        - name: tpdservice-devops-image-pull-secret
      containers:
        - name: dispatch-msg-ingest-service
          image: gbs-bat-devops-dev1-3-docker-local.artifactory.swg-devops.com:443/dispatch-msg-ingest-service:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
             path: /greeting
             port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 100Mi
