manifests/dev1.3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-dispatch-msg-ingest-service
  namespace: msdeploy-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devsvc.pri.battpd.com
    http:
      paths:
      - path: /dispatch
        backend:
          serviceName: dispatch-msg-ingest-service
          servicePort: 8080
